Replace qgetenv with qEnvironmentVariable

This preserves unicode characters in the environment variable on
Windows.

Fixes: QTBUG-85054
Change-Id: I3352cc3db4ce8d7b9b352c1634e3239954780618
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>